# computation_playground

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh
bank_conflict/: bank_conflict_test.cu
blas_compare/: Makefile  env.sh  gemm.cpp
common/: CMakeLists.txt  common.h  info.cpp  info.cu
computation_lib_compare/: Makefile  cuBlas_gemm.cpp  env.sh  mkldnn_conv1d.cpp  torch_conv1d.py  torch_gemm.py
conv1d/: conv1d.hpp
cpp/: Makefile  col2im.h  conv1d.cpp  im2col.h
cuda/: Makefile  add_vectors.cu  conv.cu  gemm.cu  gemmk.cuh  img2col.cpp  info.cu
gemm/: experiments.md  gemm_cpu.cpp  gemm_cpu.hpp
img2col/: img2col.cpp
tools/: cpu_scaling.sh  env.sh  nsight.sh
transpose2d/: CMakeLists.txt  CmakeLists.txt  main.cpp  tranpose2d.cu  transpose2d.h
vector_add/: vector_add.cu
x86/: Makefile  conv1d.cpp  conv1d.hpp
